# itr-plugin

./: .gitignore  Income-tax-Act-2025_2026_2026-06-10_03-46-08_691051_en.txt  README.md
.claude/: ralph-loop.local.md
.claude-plugin/: marketplace.json  plugin.json
reference/: income_tax_code_excerpts.md  portal_navigation_guide.md
sample_data/: ais_sample.md  pnl_sample.csv
skills/file-return/: SKILL.md
skills/file-return/reference/: income_tax_code_excerpts.md  portal_navigation_guide.md
skills/file-return/tax_engine/src/tax_engine/: __init__.py  capital_gains.py  compute_tax.py  house_property.py  slabs.py
skills/file-return/tax_engine/tests/: conftest.py  test_capital_gains.py  test_compute_tax.py  test_models.py  test_rules_loading.py
tax_engine/: pyproject.toml
tax_engine/rules/: tax_year_2026_27.json
tax_engine/src/tax_engine/: capital_gains.py  compute_tax.py  models.py  surcharge.py
tax_engine/tests/: test_capital_gains.py  test_compute_tax.py  test_end_to_end_scenarios.py  test_house_property.py  test_nps.py  test_surcharge.py
